<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_mode"
        android:icon="@drawable/baseline_brightness_medium_24"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mi_profile"
        android:actionLayout="@layout/item_menu"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/mi_history"
        android:actionLayout="@layout/item_menu"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history" />

    <item
        android:id="@+id/mi_aboutApp"
        android:actionLayout="@layout/item_menu"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about_app" />

    <item
        android:id="@+id/mi_logOut"
        android:actionLayout="@layout/item_menu"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/log_out" />
</menu>