<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/blue_background"
    tools:context=".fragment.FeedbackFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        style="@style/Theme.Pizza_Pro.AppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.Pizza_Pro.Toolbar"
            app:popupTheme="@style/ThemeOverLay.Pizza_Pro.PopupTheme"
            app:title="@string/give_us_feedback" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectangle"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/Widget.Pizza_Pro.TextView"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/what_do_you_think_of_the_app"
                    android:textColor="@color/purple" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black" />

                <RadioGroup
                    android:id="@+id/rg_satisfactionOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rb_great"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_great"
                        style="@style/Widget.Pizza_Pro.RadioButton"
                        android:text="@string/great"
                        tools:ignore="VisualLintButtonSize" />

                    <RadioButton
                        android:id="@+id/rb_good"
                        style="@style/Widget.Pizza_Pro.RadioButton"
                        android:text="@string/good"
                        tools:ignore="VisualLintButtonSize" />

                    <RadioButton
                        android:id="@+id/rb_decent"
                        style="@style/Widget.Pizza_Pro.RadioButton"
                        android:text="@string/decent"
                        tools:ignore="VisualLintButtonSize" />

                    <RadioButton
                        android:id="@+id/rb_bad"
                        style="@style/Widget.Pizza_Pro.RadioButton"
                        android:text="@string/bad"
                        tools:ignore="VisualLintButtonSize" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/great"
                        android:src="@drawable/ic_great" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/good"
                        android:src="@drawable/ic_good"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/decent"
                        android:src="@drawable/ic_decent"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/bad"
                        android:src="@drawable/ic_bad" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_rectangle"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/Widget.Pizza_Pro.TextView"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/do_you_have_any_thoughts_you_d_like_to_share"
                    android:textColor="@color/purple" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black" />

                <EditText
                    android:id="@+id/et_thoughts"
                    style="@style/NoUnderlineEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="thoughts"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/write_your_thoughts"
                    android:inputType="textMultiLine"
                    android:minHeight="120dp"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/slate"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_rectangle"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/Widget.Pizza_Pro.TextView"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/may_we_follow_you_up_on_your_feedback"
                    android:textColor="@color/purple" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Widget.Pizza_Pro.TextView"
                        android:text="@string/yes"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sc_followUp"
                        style="@style/Theme.Pizza_Pro.SwitchCompat"
                        android:checked="true"
                        android:padding="10dp"
                        android:rotation="180" />

                    <TextView
                        style="@style/Widget.Pizza_Pro.TextView"
                        android:text="@string/no"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btn_discard"
                    style="@style/Widget.Pizza_Pro.Button"
                    android:layout_alignParentStart="true"
                    android:text="@string/discard" />

                <Button
                    android:id="@+id/btn_send"
                    style="@style/Widget.Pizza_Pro.Button"
                    android:layout_alignParentEnd="true"
                    android:text="@string/send" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="BottomAppBar,RtlSymmetry,VisualLintBottomAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp"
                android:paddingEnd="20dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    style="@style/Theme.Pizza_Pro.ImageView"
                    android:contentDescription="@string/cart"
                    app:srcCompat="@drawable/ic_cart" />

                <TextView
                    style="@style/Theme.Pizza_Pro.TextView"
                    android:text="@string/cart" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_feedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:background="@color/silver"
                android:orientation="vertical"
                android:padding="2dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    style="@style/Theme.Pizza_Pro.ImageView"
                    android:contentDescription="@string/feedback"
                    app:srcCompat="@drawable/ic_feedback"
                    app:tint="@color/black" />

                <TextView
                    style="@style/Theme.Pizza_Pro.TextView"
                    android:text="@string/feedback"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        style="@style/Widget.Pizza_Pro.FrameLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout" />

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>