<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/gray_background"
    tools:context=".fragment.HistoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/search_bar"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:contentDescription="@string/search"
                    android:padding="7dp"
                    app:srcCompat="@drawable/ic_search" />

                <EditText
                    android:id="@+id/et_searchBar"
                    style="@style/NoUnderlineEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="orderName"
                    android:ems="10"
                    android:hint="@string/search_order_by_name"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layoutManager="LinearLayoutManager" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:text="@string/close"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/clear"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>